--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [project]
-name = "forked-dmcview"
+name = "alandmcview"
 version = "0.3.2"
 description = "Digital Magnatic Compass View"
 authors = [
