--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -28,22 +28,26 @@ jobs:
           name: ${{ env.dists-artifact-name }}
           path: dist/*
 
-  release:
+  publish-to-testpypi:
+    name: Publish Python 🐍 distribution 📦 to TestPyPI
     needs:
-      - build
-    runs-on: ubuntu-24.04
+    - build
+    runs-on: ubuntu-latest
+
     environment:
-      name: release-test-pypi
-      url: https://test.pypi.org/project/alandmcview/${{ github.ref_name }} #  prod: https://pypi.org/project . github.ref_name : The short ref name of the branch or tag that triggered the workflow run
+      name: testpypi
+      url: https://test.pypi.org/p/alandmcview
+
     permissions:
-      id-token: write # IMPORTANT: this permission is mandatory for trusted publishing
+      id-token: write  # IMPORTANT: mandatory for trusted publishing
+
     steps:
-      - name: Download all the dists
-        uses: actions/download-artifact@v4
-        with:
-          name: ${{ env.dists-artifact-name }}
-          path: dist/
-      - name: Publish to Test PyPI
-        uses: pypa/gh-action-pypi-publish@v1.12.4 # https://github.com/pypa/gh-action-pypi-publish
-        with:
-          attestations: true
+    - name: Download all the dists
+      uses: actions/download-artifact@v4
+      with:
+        name: python-package-distributions
+        path: dist/
+    - name: Publish distribution 📦 to TestPyPI
+      uses: pypa/gh-action-pypi-publish@release/v1
+      with:
+        repository-url: https://test.pypi.org/legacy/
