--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,4 +1,3 @@
-
 # BUILD
 # Poetry https://python-poetry.org/docs/pyproject/
 [build-system]
@@ -8,7 +7,7 @@ build-backend = "poetry.core.masonry.api"
 [project]
 name = "alandmcview"
 version = "0.3.2"
-description = "Digital Magnatic Compass View"
+description = "DMC View"
 authors = [
    {name="Iso"}, 
    {name="Alan"}
