--- a/.github/workflows/release_prod.yaml
+++ b/.github/workflows/release_prod.yaml
@@ -1,7 +1,7 @@
-name: Release to TEST PyPI
+name: Release to PROD PyPI
 on:
   push:
-    tags: ["*"] # test-1.0.0 trigger to deploy on test pypi while 1.0.0 is on production pypi
+    tags: ["release-*"] # test-1.0.0 trigger to deploy on test pypi while release-1.0.0 is on production pypi
 
 env:
   dists-artifact-name: python-package-distributions
@@ -28,26 +28,15 @@ jobs:
           name: ${{ env.dists-artifact-name }}
           path: dist/*
 
-  publish-to-testpypi:
-    name: Publish Python 🐍 distribution 📦 to TestPyPI
+  publish-to-pypi:
+    name: >-
+      Publish Python 🐍 distribution 📦 to PyPI
+    if: startsWith(github.ref, 'refs/tags/')  # only publish to PyPI on tag pushes
     needs:
     - build
     runs-on: ubuntu-latest
-
     environment:
-      name: testpypi
-      url: https://test.pypi.org/p/alandmcview
-
+      name: pypi
+      url: https://pypi.org/p/dmcview  # Replace <package-name> with your PyPI project name
     permissions:
       id-token: write  # IMPORTANT: mandatory for trusted publishing
-
-    steps:
-    - name: Download all the dists
-      uses: actions/download-artifact@v4
-      with:
-        name: python-package-distributions
-        path: dist/
-    - name: Publish distribution 📦 to TestPyPI
-      uses: pypa/gh-action-pypi-publish@release/v1
-      with:
-        repository-url: https://test.pypi.org/legacy/
