--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [project]
-name = "alandmcview"
+name = "dmcview"
 version = "0.3.2"
 description = "Digital Magnatic Compass View"
 authors = [
