fixes for the Audience and the workflow release

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,14 +30,14 @@ requires-python = ">=3.8"
 classifiers = [
     "Development Status :: 5 - Production/Stable",
     "Intended Audience :: Manufacturing",
-    "Intended Audience :: End Users/Desktop",
+    "Intended Audience :: Other Audience,
     "License :: OSI Approved :: GNU Affero General Public License v3",
     "Natural Language :: English",
     "Operating System :: Unix",
     "Operating System :: POSIX :: Linux",
     "Operating System :: MacOS",
     "Programming Language :: Python :: 3 :: Only",
-     "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
