--- a/.github/workflows/policy_docs.yml
+++ b/.github/workflows/policy_docs.yml
@@ -18,6 +18,7 @@
 #  3. Run Docs, if Source Files changed, compared to previous commit
 env:
   PYTHON_VERSION: ${{ vars.PYTHON_VERSION }}
+  TOX_VERSION: ${{ vars.TOX_VERSION }}
 
 on:
   workflow_call:
@@ -123,7 +124,7 @@ jobs:
       - name: Install Tox
         run: |
           python -m pip install --upgrade pip
-          python -m pip install tox==3.28
+          python -m pip install tox== ${{ env.TOX_VERSION }}
 
       - name: Build Documentation and Test
         if: ${{ matrix.platform == 'ubuntu-latest' || matrix.python-version  != '3.6' }}
