--- a/.github/workflows/python_imports.yml
+++ b/.github/workflows/python_imports.yml
@@ -12,6 +12,7 @@
 #  3. Draw if Source (business logic) Code (no tests) changed
 env:
   PYTHON_VERSION: ${{ vars.PYTHON_VERSIONS }}
+  TOX_VERSION: ${{ vars.TOX_VERSION }}
 
 on:
   workflow_call:
@@ -102,7 +103,7 @@ jobs:
     - name: Install tox
       run: |
         python -m pip install --upgrade pip
-        python -m pip install tox==3.28
+        python -m pip install tox== ${{ env.TOX_VERSION}}
     - name: Install dependencies (ie dot binary of graphviz)
       run: |
         sudo apt update -y --allow-releaseinfo-change
