the package name in tox.ini changed

--- a/tox.ini
+++ b/tox.ini
@@ -53,7 +53,7 @@ setenv =
     PYTHONBUFFERED = yes
     TEST_RESULTS_DIR = {toxinidir}{/}test-results
     MYPYPATH = {toxinidir}{/}src{/}stubs
-    PY_PACKAGE = dmc-view
+    PY_PACKAGE = dmcview
     PKG_VERSION = 0.3.3 # Attention: This needs to be changed if you upgrade project toml version 
     DIST_DIR = wheels-pip
     COVERAGE_FILE = {toxworkdir}{/}.coverage.{envname}
