--- a/.github/workflows/policy_docs.yml
+++ b/.github/workflows/policy_docs.yml
@@ -47,7 +47,7 @@ on:
         required: false
       ## Parametrizing Runtime Environment (ie py version)
       python_version:
-        default: '${{ env.PYTHON_VERSION }}'
+        default: '${{ vars.PYTHON_VERSION }}'
         type: string
         description: 'Python Interpreter Version to use for Docs Build Environment'
         required: false
