--- a/.github/workflows/ci_cd.yaml
+++ b/.github/workflows/ci_cd.yaml
@@ -324,5 +324,5 @@ jobs:
       run_policy: '${{ needs.set_github_outputs.outputs.PIPE_CODE_VIZ_POLICY }}'
       branches: 'main, master, dev'
       source_code_targets: 'src'
-      python_version: 'env.PYTHON_VERSION'
+      python_version: '${{ env.PYTHON_VERSION }}'
       artifacts_dir: 'dependency-graphs'
