--- a/.coveragerc
+++ b/.coveragerc
@@ -1,8 +1,7 @@
 # see config file doc: https://coverage.readthedocs.io/en/7.6.1/config.html
 [run]
 include =
-  src/*
-  tests/*
+  src/dmcview
 parallel = 1
 # branch is the if else statement 
 branch = 1
@@ -11,7 +10,9 @@ branch = 1
 skip_covered = False
 show_missing = True
 precision = 2
-omit = *migrations*
+omit =     
+    tests/*
+    */__init__.py
 exclude_lines =
     raise NotImplementedError
     raise NotImplemented
