--- a/.github/workflows/python_imports.yml
+++ b/.github/workflows/python_imports.yml
@@ -33,7 +33,7 @@ on:
       python_version:
         required: false
         type: string
-        default: '${{  vars.PYTHON_VERSION }}'
+        default: '${{ vars.PYTHON_VERSION }}'
       artifacts_dir:
         required: false
         type: string
@@ -99,7 +99,7 @@ jobs:
     - name: Set up Python ${{ inputs.python_version }}
       uses: actions/setup-python@v5.6.0
       with:
-        python-version: '${{ inputs.python_version }}'
+        python-version: ${{ env.PYTHON_VERSION}}
     - name: Install tox
       run: |
         python -m pip install --upgrade pip
