--- a/.coveragerc
+++ b/.coveragerc
@@ -1,5 +1,6 @@
 # see config file doc: https://coverage.readthedocs.io/en/7.6.1/config.html
 [run]
+source = dmcview
 include =
   src/dmcview
 parallel = 1
