--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@
 
 [tox]
 envlist =
-    {py313}-{edit, sdist, wheel}-{linux, windows}
+    {py313}-{edit,sdist,wheel}-{linux,windows}
     coverage
 isolated_build = true
 ignore_basepython_conflict = true
@@ -86,12 +86,22 @@ commands = python -c "import importlib.metadata; import os; os.environ['PKG_VERS
 [testenv:{py313-, }edit{, -linux, -windows}]
 description = Install in 'edit' mode & Test
 usedevelop = true
+commands =
+    pip install -e {toxinidir}
+    # Run basic import test to verify installation worked
+    python -c "import {env:PY_PACKAGE}; print('Successfully imported {env:PY_PACKAGE}')"
 
 # SDIST
 # Note : pypy3 (factored name) is the any interpretor of python version python 3.0.0
 [testenv:{py313-,}sdist{, -linux, -windows}]
 description = Install as Source Distribution & Test
-
+deps = build
+skip_install = true
+commands =
+    python -m build --sdist --outdir {env:BUILD_DEST:{toxworkdir}{/}dist}
+    # Test the sdist by installing it
+    pip install {env:BUILD_DEST:{toxworkdir}{/}dist}/{env:PY_PACKAGE}-{env:PKG_VERSION}.tar.gz
+    
 # Build WHEEL via PIP
 # Note: this can be run tox -e wheel which make a match as testenv we run it as tox -e test to match 
 [wheel_env] # Note: this will not inherit from testenv since it is not testenv:** from env_list section
