fixing the sdist

--- a/tox.ini
+++ b/tox.ini
@@ -91,16 +91,13 @@ commands =
     # Run basic import test to verify installation worked
     python -c "import {env:PY_PACKAGE}; print('Successfully imported {env:PY_PACKAGE}')"
 
-# SDIST
-# Note : pypy3 (factored name) is the any interpretor of python version python 3.0.0
-[testenv:{py313-,}sdist{, -linux, -windows}]
-description = Install as Source Distribution & Test
-deps = build
+# SDIST - SOURCE DISTRIBUTION
+[testenv:{py313-,}sdist{-linux,-windows}]
+description = Build Source Distribution
+deps = poetry
 skip_install = true
 commands =
-    python -m build --sdist --outdir {env:BUILD_DEST:{toxworkdir}{/}dist}
-    # Test the sdist by installing it
-    pip install {env:BUILD_DEST:{toxworkdir}{/}dist}/{env:PY_PACKAGE}-{env:PKG_VERSION}.tar.gz
+    poetry build --format sdist --output {env:BUILD_DEST:{toxinidir}{/}dist}
     
 # Build WHEEL via PIP
 # Note: this can be run tox -e wheel which make a match as testenv we run it as tox -e test to match 
