--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ keywords = [
     "digital magnatic view", "dmc",
 ]
 
-requires-python = ">=3.8"
+requires-python = "<3.14,>=3.9"
 
 # Troves classifer see https://pypi.org/classifiers/
 classifiers = [
@@ -74,7 +74,7 @@ test = [
   "pytest-cov (>=6); python_version >='3.9' and python_version <='3.13'",
   "pytest-mock (>=3.14.0); python_version >='3.9' and python_version <='3.14'",
   "pytest-qt (>=4.5.0); python_version >='3.9' and python_version <='3.13'",
-  "pyside6",
+  "pyside6 (>=6.9.1)",
   "matplotlib",
 
 ]
